# enka-py

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  example.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  ruff.toml  sitemap.xml
.github/workflows/: biweek-release.yml  build-docs.yml  bump-version.yml  main copy.yml  main.yml  pyright.yml  pytest.yml  release.yml  ruff-format.yml  ruff-lint.yml
caching/: index.html
docs/: README.md  caching.md  getting_started.md  index.md  legacy.md  migration.md  profile.md  update_assets.md
docs/reference/: cache.md  errors.md  profile.md
docs/reference/gi/: client.md  enums.md  models.md
docs/reference/hsr/: client.md  enums.md  models.md
docs/reference/zzz/: client.md  enums.md  models.md
enka/: __init__.py  client.py  constants.py  enums.py  errors.py  exceptions.py  gi.py  hsr.py  utils.py  zzz.py
enka/assets/: data.py  file_paths.py  manager.py  text_map.py  updater.py
enka/assets/gi/: file_paths.py  manager.py  updater.py
enka/assets/hsr/: file_paths.py  manager.py
enka/assets/zzz/: file_paths.py  manager.py
enka/calc/: hsr.py  zzz.py
enka/clients/: __init__.py  base.py  cache.py  gi.py  hsr.py  zzz.py
enka/constants/: common.py  gi.py  hsr.py  zzz.py
enka/enums/: __init__.py  enum.py  gi.py  hsr.py  zzz.py
enka/models/: __init__.py  character.py  costume.py  icon.py  player.py  response.py
enka/models/enka/: __init__.py  build.py  owner.py
enka/models/gi/: __init__.py  build.py  character.py  costume.py  icon.py  player.py  response.py
enka/models/hsr/: __init__.py  build.py  character.py  icon.py  player.py  response.py
enka/models/zzz/: __init__.py  build.py  character.py  icon.py  player.py  response.py
examples/: cache.py  gi.py  hsr.py
getting_started/: index.html
legacy/: index.html
migration/: index.html
profile/: index.html
reference/cache/: index.html
reference/errors/: index.html
reference/gi/client/: index.html
reference/gi/enums/: index.html
reference/gi/models/: index.html
reference/hsr/client/: index.html
reference/hsr/enums/: index.html
reference/hsr/models/: index.html
reference/profile/: index.html
reference/zzz/client/: index.html
reference/zzz/enums/: index.html
reference/zzz/models/: index.html
search/: search_index.json
tests/: conftest.py  test_enka.py  test_gi.py  test_hsr.py  test_zzz.py
update_assets/: index.html
