[project]
name = "enka"
version = "2.4.3"
description = "Async API wrapper for Enka Network written in Python, supports GI and HSR."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.10.9",
    "aiosqlite>=0.20.0",
    "loguru>=0.7.2",
    "orjson>=3.10.7",
    "pydantic>=2.9.2",
]
authors = [{ "name" = "seriaati", "email" = "seria.ati@gmail.com" }]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/seriaati/enka-py"
Repository = "https://github.com/seriaati/enka-py.git"
Issues = "https://github.com/seriaati/enka-py/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["enka"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.pyright]
typeCheckingMode = "standard"

[tool.uv]
dev-dependencies = ["pytest-asyncio>=0.24.0", "pytest>=8.3.3"]
