[project]
name = "enka"
version = "2.5.13"
description = "Async API wrapper for Enka Network written in Python, supports GI, HSR, and ZZZ."
readme = "docs/README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.10.9",
    "deprecated>=1.2.18",
    "loguru>=0.7.2",
    "orjson>=3.10.7",
    "pydantic>=2.9.2",
]
authors = [{ "name" = "seriaati", "email" = "seria.ati@gmail.com" }]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/seriaati/enka-py"
Repository = "https://github.com/seriaati/enka-py.git"
Issues = "https://github.com/seriaati/enka-py/issues"
Documentation = "https://gh.seria.moe/enka-py"

[project.optional-dependencies]
redis = ["redis[hiredis]>=6.2.0"]
sqlite = ["aiosqlite>=0.20.0"]

[dependency-groups]
docs = ["mkdocs-material[imaging]>=9.6.15", "mkdocstrings[python]>=0.29.1"]
test = ["pytest-asyncio>=0.24.0", "pytest>=8.3.3"]
type-check = ["pyright[nodejs]>=1.1.403"]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
default-groups = ["docs", "test"]

[tool.uv.build-backend]
module-root = ""

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.pyright]
enableTypeIgnoreComments = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnnecessaryIsInstance = true
reportUnnecessaryTypeIgnoreComment = true
typeCheckingMode = "standard"
